Updating setup dot py and buildout dot cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,8 @@
 [buildout]
 index = http://packages.lizardsystem.nl
-find-links = http://packages.lizardsystem.nl/coverage-3.4a1.tar.gz
+find-links = 
+    http://packages.lizardsystem.nl/coverage-3.4a1.tar.gz
+    http://garr.dl.sourceforge.net/project/pyrtf/pyrtf/0.45/PyRTF-0.45.tar.gz#egg=pyrtf-0.45
 unzip = true
 prefer-final = true
 versions = versions
